fix the extra padding bottom and add the red color to the codetap icon

--- a/web/css/font.css
+++ b/web/css/font.css
@@ -47,7 +47,7 @@
   font-style: normal;
   font-size: 8vw;
   content: "\e902";
-  color: rgb(68, 68, 68);
+  color: #d52027;
 }
 .my-cv-codetap .path2:before {
   font-style: normal;
